# Neith

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
airflow_dags/: backfill_historical.py  daily_ingestion.py  intraday_ingestion.py  maintenance.py
api/: __init__.py  main.py  query_engine.py
config/: __init__.py  iceberg_catalog.py  settings.py  topics.py
docker/: docker-compose.yml
docker/grafana/: prometheus.yml
docker/grafana/provisioning/datasources/: prometheus.yml
flink_jobs/: equity_cleaner.py  fo_cleaner.py
producers/: __init__.py  base_producer.py  corporate_producer.py  derivatives_producer.py  equity_producer.py  index_producer.py  macro_producer.py  runner.py  surveillance_producer.py
schemas/: nse_corporate_raw.avsc  nse_equity_raw.avsc  nse_fo_raw.avsc  nse_index_raw.avsc  nse_surveillance_raw.avsc
scripts/: init_topics.py
spark_jobs/: compaction.py  market_breadth.py  ohlcv_adjuster.py
